# RPC4GRAD

./: .gitignore  README.md  compile_commands.json  store_server.proto
rocket/: .clangd  CMakeLists.txt  makefile
rocket/Notes/: C++.md
rocket/Notes/NoteApps/: notes.md
rocket/Notes/RPC/: rpc_workflow.md
rocket/Notes/RPCProtocol/: DIY_protocol_style.md
rocket/Notes/Reactor/: EventLoop.md
rocket/Notes/TCP/: TCP.md  TCPBuffer.md  TCPClient.md  TCPConnection.md
rocket/Notes/git/: GitCommitStandard.md
rocket/UML/Coder/: coder_class_diagram.puml
rocket/UML/EventLoop/: EventLoop.puml  EventLoopTimePic.puml  fdevent.puml  wakeupfdEvent.puml
rocket/UML/RPC/: PRCClientCallSequence.puml  RPCAbility.puml  RPCChannelActivity.puml  RPCChannelCallFlow.puml  RPCServerCallSequence.puml  RPCinterface.puml  RpcDispatcherSequence.puml  RpcModule.puml
rocket/UML/TCP/: ClientConnectServer.puml  TCPmodule.puml  TcpClient.puml  TcpClientInitTimePic.puml  TcpServer.puml  TcpServerInitTimePic.puml  tcp_read_sequence.puml  tcp_write_sequence.puml
rocket/UML/common/: AsyncLoggerWorkSwim.puml  Logger.puml  config.puml
rocket/conf/: rocket.xml  rocket_client.xml
rocket/generator/: rocket_generator.py
rocket/generator/template/: CMakeLists.txt.template  business_exception.h.template  conf.xml.template  interface.cpp.template  interface.h.template  interface_base.cpp.template  interface_base.h.template  main.cpp.template  makefile.template  run.sh  server.cpp.template  server.h.template  test_rocket_client.cpp.template
rocket/rocket/common/: config.cpp  config.h  error_code.h  exception.h  log.cpp  log.h  msg_id_util.cpp  msg_id_util.h  mutex.h  run_time.cpp  run_time.h  util.cpp  util.h
rocket/rocket/net/: abstract_coder.h  abstract_protocol.h  eventLoop.cpp  eventLoop.h  fd_event.cpp  fd_event.h  fd_event_group.cpp  fd_event_group.h  io_thread.cpp  io_thread.h  io_thread_group.cpp  io_thread_group.h  module.cpp  plan.md  string_coder.h  timer.cpp  timer.h  timer_event.cpp  timer_event.h  wakeup_fd_event.cpp  wakeup_fd_event.h
rocket/rocket/net/TCP/: net_addr.cpp  net_addr.h  tcp_acceptor.cpp  tcp_acceptor.h  tcp_buffer.cpp  tcp_buffer.h  tcp_client.cpp  tcp_client.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
rocket/rocket/net/coder/: abstract_coder.h  abstract_protocol.h  string_coder.h  tinyPB_coder.cpp  tinyPB_coder.h  tinyPB_protocol.h
rocket/rocket/net/rpc/: rpc_channel.cpp  rpc_channel.h  rpc_closure.h  rpc_controller.cpp  rpc_controller.h  rpc_dispatcher.cpp  rpc_dispatcher.h  rpc_interface.cpp  rpc_interface.h
rocket/testcases/: test_IOthread.cpp  test_client.cpp  test_eventloop.cpp  test_log.cpp  test_rpc_client.cpp  test_rpc_server.cpp  test_tcp.cpp
rocket/testcases/protoc/: order.proto
